--- a/index.html
+++ b/index.html
@@ -147,22 +147,22 @@
 										<h1 class="gCell">COMPOSITIONS</h1>
 										<div class="gridPhoto" id="photoGrid"> 
 											<div class="gridAlt">
-												<img src="./bin/images/comps/01.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/02.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/03.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/04.png" class="photoImg" alt="">
+												<img src="./bin/images/comps/01.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/02.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/03.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/04.jpg" class="photoImg" alt="">
 											</div>
 											<div class="gridAlt">
-										 		<img src="./bin/images/comps/05.png" class="photoImg" alt="">
-										 		<img src="./bin/images/comps/06.png" class="photoImg" alt="">
-										 		<img src="./bin/images/comps/07.png" class="photoImg" alt="">
+										 		<img src="./bin/images/comps/05.jpg" class="photoImg" alt="">
+										 		<img src="./bin/images/comps/06.jpg" class="photoImg" alt="">
+										 		<img src="./bin/images/comps/07.jpg" class="photoImg" alt="">
 										 		<img src="./bin/images/comps/08.jpg" class="photoImg" alt="">
 											</div>  
 											<div class="gridAlt">
-												<img src="./bin/images/comps/09.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/10.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/11.png" class="photoImg" alt="">
-												<img src="./bin/images/comps/12.png" class="photoImg" alt="">
+												<img src="./bin/images/comps/09.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/10.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/11.jpg" class="photoImg" alt="">
+												<img src="./bin/images/comps/12.jpg" class="photoImg" alt="">
 											</div>
 										</div>
 									</div>
