--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 	<meta charset="utf-8">
 	<title>Velada Portfolio 2022</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
-	<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.23.0/phaser.min.js"></script>
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
 	<link rel="stylesheet" href="https://use.typekit.net/yxv2kwx.css"> <!--adobe fonts-->
 	<link href="portfolioCSS.css" rel="stylesheet" type="text/css">
@@ -205,6 +202,9 @@
 	
 	<span id="game"></span>
 	<span id="cursor"></span>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.23.0/phaser.min.js"></script>
 	<script src="./portfolio.js"></script>
 </body>
 </html>
