--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
+	<meta 
+		  charset="utf-8" 
+		  name="viewport" 
+		  content="width=device-width"
+		  name="Velada Portfolio Repo 2022">
 	<title>Velada Portfolio 2022</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
@@ -15,7 +19,7 @@
 	<div id="website"> <!--bounds for the content container, hides after slide closed and shows before slide open-->
 		<div id="content"> <!--the actual container jquery is sliding off the top of the screen-->
 			<a href="#about" class="home" onmouseover="changeCursor()" onmouseout="revertCursor()"> <!--logo link-->
-				<object id="banner" data="./bin/images/banner.svg" type="image/svg+xml"></object> <!--logo that moves with mouse-->
+				<object id="banner" data="./bin/images/banner.svg" type="image/svg+xml" alt=""></object> <!--logo that moves with mouse-->
 			</a>
 			<div class="controls"> <!--the container for the nav controls-->
 			  <a href="#coding">
