--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<meta 
 		  charset="utf-8" 
 		  name="viewport" 
-		  content="width=device-width"
-		  description="A showcase of the frontend things I'm teaching myself.">
+		  content="width=device-width, initial-scale=1.0, A Portfolio for a Frontend Web3 Developer and Vector Artist with a B.S. in Video Game Design.">
 	<title>Velada Portfolio 2022</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
