--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta 
-		  charset="utf-8" 
-		  name="viewport" 
-		  content="width=device-width, initial-scale=1.0, A Portfolio for a Frontend Web3 Developer and Vector Artist with a B.S. in Video Game Design.">
+	<meta name="author" content="Velada.eth">
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="Keywords" content="Web3, Frontent Developer, Portfolio, Designer, Artist">
+	<meta name="Description" 
+		  content="A Portfolio for a Frontend Web3 Developer 
+				   and Vector Artist with a 
+				   Bachelor of Science in Video Game Design.">
 	<title>Velada Portfolio 2022</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
 	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
