--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 				   Bachelor of Science in Video Game Design.">
 	<title>Velada Portfolio 2022</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
-	<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+	<link rel="preload" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<noscript><link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"></noscript>
 	<link rel="stylesheet" href="https://use.typekit.net/yxv2kwx.css"> <!--adobe fonts-->
 	<link href="portfolioCSS.css" rel="stylesheet" type="text/css">
 </head>
