--- a/index.html
+++ b/index.html
@@ -215,5 +215,6 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.23.0/phaser.min.js"></script>
 	<script src="./portfolio.js"></script>
+	<script src="./banner.js"></script>
 </body>
 </html>
