--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 								<h1 class="gCell">EXPERIENCES</h1>
 								<div class="gridDisp" id="projGrid">
 									<div>
-										<button class="projButt" onclick="window.open('./bin/pages/mag/index.html', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Staycation Magazine">
+										<button class="projButt" onclick="window.open('https://velada3.github.io/zine/', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Staycation Magazine">
 										<img src="./bin/images/mag.png" alt="" class="projImg" width="400px" height="225px">
 										</button>
 									</div>
