--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									</div>
 									
 									<div>
-										<button class="projButt" onclick="window.open('https://velada.itch.io/001', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Text Adventure">
+										<button class="projButt" onclick="window.open('https://velada3.github.io/adventure/', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Text Adventure">
 										<img src="./bin/images/adventure.png" alt="" class="projImg" width="400px" height="225px">
 										</button>
 									</div>
