--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									</div>
 									
 									<div>
-										<button class="projButt" onclick="window.open('./bin/pages/cassette/index.html', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Cassette Tape">
+										<button class="projButt" onclick="window.open('https://velada3.github.io/cassette/', '_blank');" onmouseover="changeCursor()" onmouseout="revertCursor()" title="Cassette Tape">
 											<img src="./bin/images/cassette.png" alt="" class="projImg" width="400px" height="225px">
 										</button>
 									</div>
