--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		  content="A Portfolio for a Frontend Web3 Developer 
 				   and Vector Artist with a 
 				   Bachelor of Science in Video Game Design.">
-	<title>Velada Portfolio 2022</title>
+	<title>Velada 2023 &#169</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
 	<link rel="preload" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"></noscript>
@@ -53,13 +53,13 @@
 									I found Web3 in early 2021 and immediately knew I was home. As a method artist with a wide array of design skills, creating relaxing, minimalist simulations has become my medium. The experiences that I create are my reflections on the last decade of my life. My approach is as amusing as it is unique; I emphasize use of clean, simple design elements that display both form &amp; function without all the clutter.
 								</p>
 							    <p class="pMain">
-									There's always something hidden behind the <span id="curtain">curtain-</span>
+									There's always something hiding<span id="curtain"> if you know where to look-</span>
 									<br>
 									<em><span onclick="document.location='mailto:veronica@fingerbang.io'"
 										  onmouseover="this.style.color='#FF4E75'" 
 										  onmouseout="this.style.color='#F192A7'"
 										  class="vLink">
-										get in touch and let's create an experience.</span></em>
+										drop a line for a design consultation.</span></em>
 								</p>
 							</div>
 						</div>
@@ -293,7 +293,7 @@
 											   height="800px" 
 											   loop 
 											   preload="metadata"
-											   onclick="this.play()">
+											   onclick="(this.paused) ? this.play() : this.pause()">
 											YOU NEED A BETTER BROWSER, HAAS
 										</video>
 										<div class="tombstone">
@@ -310,7 +310,7 @@
 						</div>
 					</a>
 					
-					<span style="padding: 10px; margin-bottom:20px;">&#169 Velada 2022</span>	
+					<span style="padding: 10px; margin-bottom:20px;">&#169 Velada 2023</span>	
 						
 					<a href="#about">
 						<span id="top"></span>
