--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<a id="about">
 						<div class="gridOffset" id="aboutGrid">
 							<span class="profile">
-								<img src="./bin/images/veronica.jpg" alt="the dev" id="pTicker" width="350px" height="350px">
+								<img src="./bin/images/velada.jpg" alt="the dev" id="pTicker" width="350px" height="350px">
 							</span>
 							<div class="container horizontal">
 							  	<h1 class="pMain">
