--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									I'm a Frontend Developer &amp; Vector Artist with a B.S. in Video Game Design.
 								</p>
 					  		    <p class="pMain">
-									I found Web3 in early 2021 and immediately knew I was home. As a method artist with a wide array of design skills, creating relaxing, minimalist simulations has become my medium. The experiences that I create are my reflections on the last decade of my life. My approach is as amusing as it is unique; I emphasize use of clean, simple design elements that display both form &amp; function without all the clutter.
+									A method artist with a wide array of design skills, creating relaxing, minimalist simulations has become my medium. The experiences that I create are my reflections on the last decade of my life. My approach is as amusing as it is unique; I emphasize use of clean, simple design elements that display both form &amp; function without all the clutter.
 								</p>
 							    <p class="pMain">
 									There's always something hiding<span id="curtain"> if you know where to look-</span>
@@ -319,13 +319,13 @@
 			</div>
 			
 			<div class="footer">
-				<a href="https://twitter.com/velada_" target="_blank">
+				<a href="https://bsky.app/profile/velada.bsky.social" target="_blank">
 					<button class="fnav" id="twitter" title="Twitter"></button>
 				</a>
 				<a href="https://discordapp.com/users/300099847753826304" target="_blank">
 					<button class="fnav" id="discord" title="Discord"></button>
 				</a>
-				<a href="mailto:veronica@fingerbang.io" target="_blank">
+				<a href="mailto:v@superloaf.co" target="_blank">
 					<button class="fnav" id="email" title="Email"></button>
 				</a>
 			</div>
