--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		  content="A Portfolio for a Frontend Web3 Developer 
 				   and Vector Artist with a 
 				   Bachelor of Science in Video Game Design.">
-	<title>Velada 2023 &#169</title>
+	<title>Velada 2025 &#169</title>
 	<link rel="icon" type="image/x-icon" href="./bin/images/favicon.ico">
 	<link rel="preload" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 	<noscript><link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css"></noscript>
@@ -50,7 +50,7 @@
 									I'm a Frontend Developer &amp; Vector Artist with a B.S. in Video Game Design.
 								</p>
 					  		    <p class="pMain">
-									A method artist with a wide array of design skills, creating relaxing, minimalist simulations has become my medium. The experiences that I create are my reflections on the last decade of my life. My approach is as amusing as it is unique; I emphasize use of clean, simple design elements that display both form &amp; function without all the clutter.
+									Creating relaxing, minimalist simulations has become my medium. Lately, that's taken the form of Tabletop RPGs. The experiences that I create are my reflections on the last 15 years of my life. My approach is as amusing as it is unique; I emphasize clean, simple design elements that display both form &amp; function without all the clutter.
 								</p>
 							    <p class="pMain">
 									There's always something hiding<span id="curtain"> if you know where to look-</span>
@@ -294,7 +294,7 @@
 											   loop 
 											   preload="metadata"
 											   onclick="(this.paused) ? this.play() : this.pause()">
-											YOU NEED A BETTER BROWSER, HAAS
+											YOU NEED A BETTER BROWSER, HOSS.
 										</video>
 										<div class="tombstone">
 											<strong style="font-size: 130%"><em>Loading Screen, </em></strong>2021
@@ -310,7 +310,7 @@
 						</div>
 					</a>
 					
-					<span style="padding: 10px; margin-bottom:20px;">&#169 Velada 2023</span>	
+					<span style="padding: 10px; margin-bottom:20px;">&#169 Velada 2025</span>	
 						
 					<a href="#about">
 						<span id="top"></span>
